fixed size of contact form on small screens

--- a/style.scss
+++ b/style.scss
@@ -281,6 +281,7 @@ body {
   margin-left: (-200px);
   background-color: #fff;
   z-index: 12;
+  max-width: 90vw;
   .close-button {
     font-family: "Courier New", Courier, monospace;
     position: absolute;
